testsuite/tests/typecheck/should_fail/T9201.stderr

T9201.hs:6:17: error:
    The first argument of ‘f’ should have kind ‘x1’,
      but ‘a’ has kind ‘y1’
    In the type ‘d a (f a)’
    In the class declaration for ‘MonoidalCCC’
